[package]
name = "typed-htmx"
version = "0.0.1"
edition = "2018"
authors = ["Axo Developer Co <hello@axo.dev>", "Bodil Stokke <bodil@bodil.org>", "Keshav Babu <me@keshavbabu.com>"]
license = "MPL-2.0+"
description = "Type checked JSX for Rust"
repository = "https://github.com/keshavbabu/typed-htmx"
documentation = "http://docs.rs/typed-htmx/"
readme = "../README.md"
categories = ["template-engine", "web-programming"]
keywords = ["jsx", "html", "htmx"]

[dependencies]
typed-htmx-macros = { path = "../macros", version = "0.0.1" }
strum = "0.24"
strum_macros = "0.24"
mime = "0.3.17"
language-tags = "0.3"
htmlescape = "0.3.1"
proc-macro-nested = "0.1.7"
